--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "client-install": "cd client && npm install",
     "client-build": "cd client && npm run build",
     "heroku-postbuild": "npm run client-install && npm run client-build",
